[package]
name = "goldilocks_64bit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambdaworks-math = { git = "https://github.com/lambdaclass/lambdaworks.git" }

[[test]]  
name = "goldilocks_64bit"
path = "src/u64_goldilocks.rs"